--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 locale: "ja-JP"
-title: "Helix Coreの各種リソース紹介"
+title: "Helix Core参考リソースのまとめ"
 name: "p4misc"
 url: "https://p4misc.github.io"
 repository: "p4misc/p4misc.github.io"
