--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ title: "Helix Core参考リソースのまとめ"
 name: "p4misc"
 url: "https://p4misc.github.io"
 repository: "p4misc/p4misc.github.io"
+plugins:
+ - jekyll-sitemap
