--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ title: "Helix Core参考リソースのまとめ"
 name: "p4misc"
 url: "https://p4misc.github.io"
 repository: "p4misc/p4misc.github.io"
+google_site_verification: Clf7stPH3DxzaZd28rViGit3WEmqx_d-G5k3V72rWeU
 plugins:
  - jekyll-sitemap
  - jekyll-seo-tag
